Arreglo de enlaces del nav

--- a/ventas.html
+++ b/ventas.html
@@ -19,8 +19,8 @@
         </div>
         <div class="nav_options fadeInDown">
             <ul>
-                <li><a href="#">Faqs</a></li>
-                <li><a href="#">Productos y descripción</a></li>
+                <li><a href="faqs.html">Faqs</a></li>
+                <li><a href="producto.html">Productos y descripción</a></li>
             </ul>
         </div>
     </nav>
